--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio do Aluno</title>
+    <title>Portfólio Fofo</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -17,14 +19,16 @@
     <header class="fixed-top shadow-sm">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand fw-bold" href="index.html">Nome do Estudante</a>
+                <a class="navbar-brand fw-bold" href="index.html">
+                    <i class="fas fa-heart me-2"></i>Nome do Estudante
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="sistemas.html" class="nav-link menu-item"><i class="fas fa-laptop-code me-2"></i>Prog. Des. Sistemas</a>
+                            <a href="sistemas.html" class="nav-link menu-item"><i class="fas fa-laptop-code me-2"></i>Prog. Sistemas</a>
                         </li>
                         <li class="nav-item">
                             <a href="banco-dados.html" class="nav-link menu-item"><i class="fas fa-database me-2"></i>Banco de Dados</a>
@@ -45,14 +49,19 @@
                     <div class="col-md-4 text-center">
                         <div class="profile-image-container">
                             <img src="img/logo.png" alt="Foto do Estudante" class="profile-image">
+                            <div class="hearts-decoration">
+                                <i class="fas fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-8 profile-info">
                         <h1 class="display-5 fw-bold">Nome do Estudante</h1>
                         <div class="badge-container">
-                            <span class="badge rounded-pill bg-primary"><i class="fas fa-code me-1"></i> Desenvolvedor</span>
-                            <span class="badge rounded-pill bg-success"><i class="fas fa-database me-1"></i> DBA</span>
-                            <span class="badge rounded-pill bg-warning text-dark"><i class="fas fa-mobile-alt me-1"></i> Mobile Dev</span>
+                            <span class="badge rounded-pill bg-soft-pink"><i class="fas fa-code me-1"></i> Desenvolvedor</span>
+                            <span class="badge rounded-pill bg-soft-green"><i class="fas fa-database me-1"></i> DBA</span>
+                            <span class="badge rounded-pill bg-soft-scarlet"><i class="fas fa-mobile-alt me-1"></i> Mobile Dev</span>
                         </div>
                         <p class="lead mt-3">
                             Sou um estudante apaixonado por tecnologia e desenvolvimento de software. 
@@ -61,7 +70,9 @@
                             de sistemas, banco de dados e aplicações mobile sob orientação do professor 
                             Bruno Carvalho.
                         </p>
-                        <h2 class="h4 fw-bold highlight-text mt-4">Meus Projetos de 2025</h2>
+                        <h2 class="h4 fw-bold highlight-text mt-4">
+                            <i class="fas fa-heart me-2"></i>Meus Projetos de 2025
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -71,35 +82,49 @@
             <div class="container text-center">
                 <div class="row justify-content-center">
                     <div class="col-md-4 mb-4">
-                        <div class="project-card">
+                        <div class="project-card card-pink">
                             <div class="card-icon">
                                 <i class="fas fa-laptop-code"></i>
                             </div>
-                            <h3>Programação e Desenvolvimento de Sistemas</h3>
+                            <h3>Programação de Sistemas</h3>
                             <p>Projetos com foco em desenvolvimento web e desktop utilizando tecnologias modernas.</p>
-                            <a href="sistemas.html" class="btn btn-primary project-btn">Ver projetos</a>
+                            <a href="sistemas.html" class="btn btn-pink project-btn">Ver projetos <i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
-                        <div class="project-card">
+                        <div class="project-card card-green">
                             <div class="card-icon">
                                 <i class="fas fa-database"></i>
                             </div>
                             <h3>Banco de Dados</h3>
                             <p>Modelagem, implementação e otimização de bancos de dados relacionais e NoSQL.</p>
-                            <a href="banco-dados.html" class="btn btn-success project-btn">Ver projetos</a>
+                            <a href="banco-dados.html" class="btn btn-green project-btn">Ver projetos <i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
-                        <div class="project-card">
+                        <div class="project-card card-scarlet">
                             <div class="card-icon">
                                 <i class="fas fa-mobile-alt"></i>
                             </div>
                             <h3>Programação Mobile</h3>
                             <p>Desenvolvimento de aplicativos mobile com interfaces intuitivas e responsivas.</p>
-                            <a href="#" class="btn btn-warning project-btn text-dark">Ver projetos</a>
+                            <a href="#" class="btn btn-scarlet project-btn">Ver projetos <i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        
+        <section class="dicas-section">
+            <div class="container">
+                <div class="dicas-box">
+                    <h3><i class="fas fa-lightbulb me-2"></i> Minhas Inspirações</h3>
+                    <ul>
+                        <li>Criar soluções que tornem a vida das pessoas mais feliz</li>
+                        <li>Desenvolver com amor e atenção aos detalhes</li>
+                        <li>Aprender coisas novas todos os dias</li>
+                        <li>Compartilhar conhecimento com a comunidade</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -107,20 +132,25 @@
     
     <footer>
         <div class="container">
-            <div class="text-center mb-4">
-                <h3>Conecte-se comigo</h3>
-                <div class="social-icons">
-                    <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <div class="footer-content">
+                <div class="text-center mb-4">
+                    <h3>Vamos conversar! <i class="fas fa-heart ms-2"></i></h3>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="text-center">
-                <p class="email-link">
-                    <i class="fas fa-envelope me-2"></i>
-                    <a href="mailto:aluno@escola.pr.gov.br">aluno@escola.pr.gov.br</a>
-                </p>
-                <p class="copyright">© 2025 Nome do Estudante. Todos os direitos reservados.</p>
+                <div class="text-center">
+                    <p class="email-link">
+                        <i class="fas fa-envelope me-2"></i>
+                        <a href="mailto:aluno@escola.pr.gov.br">aluno@escola.pr.gov.br</a>
+                    </p>
+                    <p class="copyright">
+                        Feito com <i class="fas fa-heart" style="color: #ff6b8b;"></i> por Nome do Estudante © 2025
+                    </p>
+                </div>
             </div>
         </div>
     </footer>
