--- a/trio.html
+++ b/trio.html
@@ -44,7 +44,7 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-md-4 text-center">
                         <div class="profile-image-container">
-                            <img src="img/logo.png" alt="Foto do Estudante" class="profile-image">
+                            <img src="img/perfil.jpg" alt="Foto do Estudante" class="profile-image">
                         </div>
                     </div>
                     <div class="col-md-8 profile-info">
